deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-service
spec:
  selector:
    app: tech-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
