deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-ingress
spec:
  ingressClassName: external-ingress
  defaultBackend:
    service:
      name: tech-challenge-service
      port:
        number: 8080
